Seção 5: Angular, Interpolação, Diretiva e Binding

--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,8 +1,64 @@
-<h1>Eventos do Components</h1>
-
+<h2>Eventos</h2>
 <hr>
-<div *ngFor="let evento of eventos">
-  <p><b>Tema:</b> {{evento.tema}}</p>
-  <p><b>Local:</b> {{evento.local}}</p>
-  <hr>
+<div class="col-6">
+  <label><b>Filtro:</b></label>
 </div>
+<div class="row row-cols-lg-3 g-3 align-items-center mb-2">
+  <div class="col-12">
+    <input
+      type="text"
+      class="form-control mr2"
+      placeholder="buscar"
+      [(ngModel)]="filtroLista"
+    >
+  </div>
+</div>
+<table class="table table-striped">
+  <thead class="table-dark">
+    <tr>
+      <th>
+        <button
+          type="button" class="btn btn-outline-light btn-sm"
+          (click)="alterarImagem()">
+          {{!exibirImagem ? 'Exibir' : 'ocultar'}}
+        </button>
+      </th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="eventos && eventos.length">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <td>
+        <img *ngIf="exibirImagem"
+          src="/assets/{{evento.imagemURL}}"
+          [style.width.px]="larguraImagem"
+          [style.margin.px]="margemImagem"
+        >
+      </td>
+      <td>{{evento.eventoId}}</td>
+      <td>{{evento.tema}}</td>
+      <td>{{evento.local}}</td>
+      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.qtdPessoas}}</td>
+      <td>{{evento.lote}}</td>
+      <td>
+        <button type="button" class="btn btn-primary btn-sm me-md-2">Editar</button>
+        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot *ngIf="!eventos.length">
+    <tr>
+      <td colspan="8" class="Text-center">
+        <h4>Nenhum evento encontrado</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
+
