--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,76 +1,3 @@
-<app-tittulo [titulo]="'Eventos'" ></app-tittulo>
-<div class="col-6">
-  <label><b>Filtro:</b></label>
-</div>
-<div class="row row-cols-lg-3 g-3 align-items-center mb-2">
-  <div class="col-12">
-    <input
-      type="text"
-      class="form-control mr2"
-      placeholder="buscar"
-      [(ngModel)]="filtroLista"
-    >
-  </div>
-</div>
-<table class="table table-striped">
-  <thead class="table-dark">
-    <tr>
-      <th>
-        <button
-          type="button" class="btn btn-outline-light btn-sm"
-          (click)="alterarImagem()">
-          <i class="{{!exibirImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
-          {{!exibirImagem ? 'Exibir' : 'ocultar'}}
-        </button>
-      </th>
-      <th>#</th>
-      <th>Tema</th>
-      <th>Local</th>
-      <th>Data</th>
-      <th>Qtd Pessoas</th>
-      <th>Lote</th>
-      <th>Opções</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="eventos && eventos.length">
-    <tr *ngFor="let evento of eventosFiltrados">
-      <td>
-        <img *ngIf="exibirImagem"
-          src="/assets/{{evento.imagemURL}}"
-          [style.width.px]="larguraImagem"
-          [style.margin.px]="margemImagem"
-        >
-      </td>
-      <td>{{evento.id}}</td>
-      <td>{{evento.tema}}</td>
-      <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento | DateFormatPipe}}</td>
-      <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lotes[0].nome}}</td>
-      <td>
-        <button type="button" class="btn btn-primary btn-sm me-md-2" tooltip="Editar">
-          <i class="fa fa-edit"></i>
-        </button>
-        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
-          <i class="fa fa-trash"></i>
-        </button>
-      </td>
-    </tr>
-  </tbody>
-  <tfoot *ngIf="!eventos.length">
-    <tr>
-      <td colspan="8" class="Text-center">
-        <h4>Nenhum evento encontrado</h4>
-      </td>
-    </tr>
-  </tfoot>
-</table>
-
-<ng-template #template>
-  <div class="modal-body text-center">
-    <p>Você quer confirmar?</p>
-    <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
-    <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
-  </div>
-</ng-template>
-
+<app-tittulo [titulo]="'Eventos'" [iconClass]="'fa fa-calendar-alt'" [botaoListar]="true">
+</app-tittulo>
+<router-outlet></router-outlet>
